--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -25,6 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+
+    compile 'com.zhy:base-rvadapter:3.0.3'
+    compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
     testCompile 'junit:junit:4.12'
     compile project(':AndroidBase')
 }
