1.任务学习路径界面完善和数据逻辑，接口调试；2.单个课程分类列表

--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -16,6 +16,29 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    signingConfigs {
+        release {
+            storeFile project.rootProject.file('iwexunkey.jks')
+            storePassword "iwexun"
+            keyAlias "iwexun"
+            keyPassword "iwexun"
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),'proguard-rules.pro'
+        }
+
+        debug {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles 'proguard-rules.pro'
+        }
+
     }
 }
 
