--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.9'
     //开关按钮
     compile 'com.kyleduo.switchbutton:library:1.4.4'
+
+    compile 'com.loopj.android:android-async-http:1.4.9'
     testCompile 'junit:junit:4.12'
     compile project(':AndroidBase')
 }
