--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.android.ge"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 4
+        versionName "1.1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -65,6 +65,9 @@ dependencies {
     compile 'com.kyleduo.switchbutton:library:1.4.4'
 
     compile 'com.loopj.android:android-async-http:1.4.9'
+
+    //腾讯bugly
+    compile 'com.tencent.bugly:crashreport:latest.release'
     testCompile 'junit:junit:4.12'
     compile project(':AndroidBase')
 }
