课程分类完善

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -97,6 +97,9 @@
         <activity
             android:name=".ui.webview.ExamWebActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.webview.NewsWebActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity android:name=".ui.course.CourseTypeAllActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
