横竖屏切换不重建配置

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -87,21 +87,26 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.webview.CommonWebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar"
             android:hardwareAccelerated="true" />
         <activity
             android:name=".ui.webview.CourseWebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.webview.PathWebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar"
             android:hardwareAccelerated="true" />
         <activity
             android:name=".ui.webview.ExamWebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar"
             android:hardwareAccelerated="true" />
         <activity
             android:name=".ui.webview.NewsWebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar"
             android:hardwareAccelerated="true" />
 
